--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,15 +1,19 @@
-<nav class="container flex justify-around  mx-auto bg-teal-600 py-2">
+<nav class="container flex justify-around  mx-auto bg-teal-600 py-2   items-center mx-auto">
   <div>
-    <a href="{{ '/' | url }}">          <img style="width:100px" src="{{ '/assets/img/logo2.png' | url }}" alt=""/>
- </a>
+    <a class="flex" href="{{ '/' | url }}">
+      <img class="" style="width:100px; padding-right:20px;" src="{{ '/assets/img/logo2.png' | url }}" alt=""/>
+    </a>
   </div>
-  <div class="space-x-8 text-white text-lg uppercase font-bold py-8 ">
- {% for page in collections.pages | sortByOrder %}
-  
-<a class="hover:text-amber-400" href="{{page.url | url }}">{{page.data.title}}</a>
-
-
-{% endfor %}
-
+  <div class="space-x-8 text-white text-lg uppercase font-bold py-8 hidden w-full md:block md:w-auto" id="mobile-menu"">
+    <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
+    {% for page in collections.pages | sortByOrder %}
+      <li><a class="hover:text-amber-400 text-lg	" href="{{page.url | url }}">{{page.data.title}}</a></li>
+    {% endfor %}
+    </ul>
   </div>
+  <button data-collapse-toggle="mobile-menu" type="button" class="inline-flex items-center p-2 ml-3 text-lg text-gray-100 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false" style="margin-right:20px;">
+    <span class="sr-only">Open main menu</span>
+      <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+      <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+  </button>
 </nav>
