--- a/src/_includes/layout.njk
+++ b/src/_includes/layout.njk
@@ -10,18 +10,20 @@
     <script src="{{ '/assets/main.bundle.js' | url }}" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-
-        <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/flowbite@1.3.4/dist/flowbite.min.css" />
 
 
     <title>{{ title }}</title>
 
 </head>
-<body class="flex flex-col min-h-screen bg-slate-200">
-<main class="container flex-grow">
-{{ content | safe }}
-</main>    
-</body>
+    <body class="flex flex-col min-h-screen bg-slate-200">
+        <main class="container flex-grow md:mx-auto">
+            {{ content | safe }}
+        </main>    
+    <script src="https://unpkg.com/flowbite@1.3.4/dist/flowbite.js"></script>
+
+    </body>
 </html>
